helm/istio-manifest/api-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # 기본 Istio Ingress Gateway 사용
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
