helm/istio-manifest/virtual-member.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-routes
  namespace: member
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/api-gateway #어떤 gateway 참조할지 결종
  http:
  # Member 서비스
  - match:
    - uri:
        prefix: /v1/members/
    route:
    - destination:
        host: member-service.member.svc.cluster.local
        port:
          number: 8081  # service port인데 이번 service port Target port 같이 지정해서 관리 할 예정
