helm/istio-manifest/virtual-report.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-routes
  namespace: report
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/api-gateway #어떤 gateway 참조할지 결종
  http:
  # report-service
  - match:
    - uri:
        prefix: /v1/reports/
    route:
    - destination:
        host: report-service.report.svc.cluster.local
        port:
          number: 8084
